--- a/ansible/roles/ocp4-workload-ccnrd/files/gogs-template.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/gogs-template.yaml
@@ -238,7 +238,7 @@ objects:
     - name: "${GOGS_VERSION}"
       from:
         kind: DockerImage
-        name: docker.io/openshiftdemos/gogs:${GOGS_VERSION}
+        name: {{ wzh_registry_server }}/docker.io/openshiftdemos/gogs:${GOGS_VERSION}
       importPolicy: {}
       annotations:
         description: The Gogs git server docker image
