--- a/ansible/roles/ocp4-workload-ccnrd/files/rhamt-template.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/rhamt-template.yaml
@@ -365,7 +365,7 @@ objects:
         terminationGracePeriodSeconds: 75
         containers:
         - name: "${APPLICATION_NAME}"
-          image: quay.io/openshiftlabs/rhamt-web-openshift:${DOCKER_IMAGES_TAG}
+          image: {{ wzh_registry_server }}/quay.io/openshiftlabs/rhamt-web-openshift:${DOCKER_IMAGES_TAG}
           imagePullPolicy: Always
           resources:
             requests:
@@ -525,7 +525,7 @@ objects:
         terminationGracePeriodSeconds: 75
         containers:
         - name: "${APPLICATION_NAME}-executor"
-          image: quay.io/openshiftlabs/rhamt-web-openshift-messaging-executor:${DOCKER_IMAGES_TAG}
+          image: {{ wzh_registry_server }}/quay.io/openshiftlabs/rhamt-web-openshift-messaging-executor:${DOCKER_IMAGES_TAG}
           imagePullPolicy: Always
           resources:
             requests:
