--- a/ansible/roles/ocp4-workload-ccnrd/files/sso74-image-stream.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/sso74-image-stream.yaml
@@ -27,4 +27,4 @@ spec:
       type: Local
     from:
       kind: DockerImage
-      name: registry.redhat.io/rh-sso-7/sso74-openshift-rhel8:7.4
+      name: {{ wzh_registry_server }}/registry.redhat.io/rh-sso-7/sso74-openshift-rhel8:7.4
