--- a/ansible/roles/ocp4-workload-ccnrd/files/stack_imagestream.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/stack_imagestream.yaml
@@ -14,15 +14,15 @@ spec:
       version: "1.8"
     from:
       kind: DockerImage
-      name: quay.io/openshiftlabs/cloudnative-workspaces-quarkus:1.8
+      name: {{ wzh_registry_server }}/quay.io/openshiftlabs/cloudnative-workspaces-quarkus:1.8
     name: "1.8"
   - annotations:
       description: Quarkus stack for Java and CodeReady Workspaces
       iconClass: icon-java
       supports: java
       tags: builder,java
-      version: "1.8"
+      version: "2.1"
     from:
       kind: DockerImage
-      name: quay.io/openshiftlabs/cloudnative-workspaces-quarkus:2.1
+      name: {{ wzh_registry_server }}/quay.io/openshiftlabs/cloudnative-workspaces-quarkus:2.1
     name: "2.1"
