--- a/ansible/roles/ocp4-workload-ccnrd/files/pipelines_subscription.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/pipelines_subscription.yaml
@@ -8,5 +8,5 @@ spec:
   channel: dev-preview
   installPlanApproval: Automatic
   name: openshift-pipelines-operator
-  source: community-operators
+  source: community-operator-catalog
   sourceNamespace: openshift-marketplace
