--- a/ansible/roles/ocp4-workload-ccnrd/files/codeready_subscription.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/codeready_subscription.yaml
@@ -8,5 +8,5 @@ spec:
   channel: latest
   installPlanApproval: Automatic
   name: codeready-workspaces
-  source: redhat-operators
+  source: redhat-operator-catalog
   sourceNamespace: openshift-marketplace
