--- a/ansible/roles/ocp4-workload-ccnrd/files/elasticsearch_subscription.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/elasticsearch_subscription.yaml
@@ -8,5 +8,5 @@ spec:
   channel: "4.3"
   installPlanApproval: Automatic
   name: elasticsearch-operator
-  source: redhat-operators
+  source: redhat-operator-catalog
   sourceNamespace: openshift-marketplace
