--- a/ansible/roles/ocp4-workload-ccnrd/files/kiali_subscription.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/kiali_subscription.yaml
@@ -8,5 +8,5 @@ spec:
   channel: "stable"
   installPlanApproval: Automatic
   name: kiali-ossm
-  source: redhat-operators
+  source: redhat-operator-catalog
   sourceNamespace: openshift-marketplace
