--- a/ansible/roles/ocp4-workload-ccnrd/files/serverless_subscription.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/serverless_subscription.yaml
@@ -8,5 +8,5 @@ spec:
   channel: "4.4"
   installPlanApproval: Automatic
   name: serverless-operator
-  source: redhat-operators
+  source: redhat-operator-catalog
   sourceNamespace: openshift-marketplace
