select attr, m1 final

--- a/ansible/roles/ocp4-workload-ccnrd/files/codeready_cr.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/codeready_cr.yaml
@@ -11,7 +11,7 @@ spec:
     devfileRegistryImage: ''
     pluginRegistryImage: ''
     tlsSupport: true
-    selfSignedCert: false
+    selfSignedCert: true
     serverMemoryRequest: '2Gi'
     serverMemoryLimit: '6Gi'
     customCheProperties:
