--- a/ansible/roles/ocp4-workload-ccnrd/tasks/install-codeready.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/install-codeready.yaml
@@ -56,11 +56,11 @@
 
 - name: set codeready username fact
   set_fact:
-    codeready_sso_admin_username: "{{ r_keycloak_deployment.resources[0].spec.template.spec.containers[0].env | selectattr('name','equalto','SSO_ADMIN_USERNAME') |map (attribute='value') | list | first }}"
+    codeready_sso_admin_username: "{{ r_keycloak_deployment.resources[0].spec.template.spec.containers[0].env | selectattr('name','match','^SSO_ADMIN_USERNAME$') |map (attribute='value') | list | first }}"
 
 - name: set codeready password fact
   set_fact:
-    codeready_sso_admin_password: "{{ r_keycloak_deployment.resources[0].spec.template.spec.containers[0].env | selectattr('name','equalto','SSO_ADMIN_PASSWORD') |map (attribute='value') | list | first }}"
+    codeready_sso_admin_password: "{{ r_keycloak_deployment.resources[0].spec.template.spec.containers[0].env | selectattr('name','match','^SSO_ADMIN_PASSWORD$') |map (attribute='value') | list | first }}"
 
 - name: show codeready keycloak admin username
   debug:
