tasks for remove

--- a/ansible/roles/ocp4-workload-ccnrd/files/knative-sources.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/knative-sources.yaml
@@ -464,7 +464,7 @@ spec:
       serviceAccountName: kafka-controller-manager
       containers:
       - name: manager
-        image: {{ wzh_registry_server }}/gcr.io/knative-releases/knative.dev/eventing-contrib/kafka/source/cmd/controller@sha256:5deaf9b0c408607d22ff1dc6d43d3c6c1a34dbe5465e6cd5ffdf4e9abf7250a7
+        image: gcr.io/knative-releases/knative.dev/eventing-contrib/kafka/source/cmd/controller@sha256:5deaf9b0c408607d22ff1dc6d43d3c6c1a34dbe5465e6cd5ffdf4e9abf7250a7
         env:
         - name: SYSTEM_NAMESPACE
           valueFrom:
