--- a/ansible/roles/ocp4-workload-ccnrd/tasks/remove_workload.yml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/remove_workload.yml
@@ -21,6 +21,24 @@
   debug:
     msg: "selected modules list: {{ modules }}"
 
+- name: Remove service mesh
+  include_tasks: remove-servicemesh.yaml
+
+- name: Remove serviceless
+  include_tasks: remove-serviceless.yaml
+
+- name: Remove pipelines
+  include_tasks: remove-pipelines.yaml
+
+- name: Remove jaeger
+  include_tasks: remove-jaeger.yaml
+
+- name: Remove codeready
+  include_tasks: remove-codeready.yaml
+
+- name: Remove amqstreams
+  include_tasks: remove-amqstreams.yaml
+
 - name: delete templates from openshift namespace
   command: oc delete -n openshift -f -
   args:
