--- a/ansible/roles/ocp4-workload-ccnrd/tasks/remove_user_service_mesh.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/remove_user_service_mesh.yaml
@@ -6,10 +6,11 @@
     - strategic-merge
     - merge
     definition: "{{ lookup('template', './templates/osm_smcp.yaml' ) | from_yaml }}"
-  register: smcp_result_r
-  retries: 120
-  delay: 10
-  until: smcp_result_r is succeeded
+  # ignore_errors: yes
+  # register: smcp_result_r
+  # retries: 120
+  # delay: 10
+  # until: smcp_result_r is succeeded
 
 # - name: Create ServiceMeshMemberRole for service mesh for {{ user }} in {{ project }}
 #   k8s:
