--- a/ansible/roles/ocp4-workload-ccnrd/tasks/main.yml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/main.yml
@@ -7,7 +7,7 @@
     file: ./pre_workload.yml
     apply:
       become: "{{ become_override | bool }}"
-  when: ACTION == "create" or ACTION == "provision"
+  when: ACTION == "create" or ACTION == "provision" or ACTION == "remove"
 
 - name: Running Workload Tasks
   include_tasks:
