--- a/ansible/roles/ocp4-workload-ccnrd/tasks/remove-codeready.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/remove-codeready.yaml
@@ -25,15 +25,15 @@
   - ./files/codeready_subscription.yaml
 
 # wait for CRD to be a thing
-- name: Wait for CodeReady CRD to be ready
-  k8s_facts:
-    api_version: apiextensions.k8s.io/v1beta1
-    kind: CustomResourceDefinition
-    name: checlusters.org.eclipse.che
-  register: r_codeready_crd
-  retries: 200
-  delay: 10
-  until: r_codeready_crd.resources | list | length == 0
+# - name: Wait for CodeReady CRD to be ready
+#   k8s_facts:
+#     api_version: apiextensions.k8s.io/v1beta1
+#     kind: CustomResourceDefinition
+#     name: checlusters.org.eclipse.che
+#   register: r_codeready_crd
+#   retries: 200
+#   delay: 10
+#   until: r_codeready_crd.resources | list | length == 0
 
 
 
