--- a/ansible/roles/ocp4-workload-ccnrd/tasks/remove-jaeger.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/remove-jaeger.yaml
@@ -9,14 +9,14 @@
   loop:
   - ./files/jaeger_subscription.yaml
 
-- name: Wait for Jaeger CRD
-  k8s_facts:
-    api_version: apiextensions.k8s.io/v1beta1
-    kind: CustomResourceDefinition
-    name: jaegers.jaegertracing.io
-  register: r_jaeger_crd
-  retries: 200
-  delay: 10
-  until: r_jaeger_crd.resources | list | length == 0
+# - name: Wait for Jaeger CRD
+#   k8s_facts:
+#     api_version: apiextensions.k8s.io/v1beta1
+#     kind: CustomResourceDefinition
+#     name: jaegers.jaegertracing.io
+#   register: r_jaeger_crd
+#   retries: 200
+#   delay: 10
+#   until: r_jaeger_crd.resources | list | length == 0
 
 
