--- a/ansible/roles/ocp4-workload-ccnrd/tasks/remove-serverless.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/remove-serverless.yaml
@@ -20,15 +20,15 @@
   loop:
   - ./files/knative_serving_cr.yaml
 
-- name: Wait for knative-eventing project to exist
-  k8s_facts:
-    api_version: project.openshift.io/v1
-    kind: Project
-    name: "knative-eventing"
-  register: r_kneventing_project
-  retries: 200
-  delay: 10
-  until: r_kneventing_project.resources | list | length == 0
+# - name: Wait for knative-eventing project to exist
+#   k8s_facts:
+#     api_version: project.openshift.io/v1
+#     kind: Project
+#     name: "knative-eventing"
+#   register: r_kneventing_project
+#   retries: 200
+#   delay: 10
+#   until: r_kneventing_project.resources | list | length == 0
 
 
 # Create knative-serving, knative-eventing projects
@@ -56,15 +56,15 @@
   - ./files/serverless_subscription.yaml
 
 # wait for serverless CRDs
-- name: Wait for knative-serving CRD
-  k8s_facts:
-    api_version: apiextensions.k8s.io/v1beta1
-    kind: CustomResourceDefinition
-    name: knativeservings.operator.knative.dev
-  register: r_knserving_crd
-  retries: 200
-  delay: 10
-  until: r_knserving_crd.resources | list | length == 0
+# - name: Wait for knative-serving CRD
+#   k8s_facts:
+#     api_version: apiextensions.k8s.io/v1beta1
+#     kind: CustomResourceDefinition
+#     name: knativeservings.operator.knative.dev
+#   register: r_knserving_crd
+#   retries: 200
+#   delay: 10
+#   until: r_knserving_crd.resources | list | length == 0
 
 # - name: wait for serving project to exist
 #   k8s_facts:
