--- a/ansible/roles/ocp4-workload-ccnrd/tasks/remove-servicemesh.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/remove-servicemesh.yaml
@@ -16,16 +16,17 @@
     definition: "{{ lookup('file', item ) | from_yaml }}"
   loop:
   - ./files/osm_subscription.yaml
+  
 
-- name: Wait for service mesh control plane CRD
-  k8s_facts:
-    api_version: apiextensions.k8s.io/v1beta1
-    kind: CustomResourceDefinition
-    name: servicemeshcontrolplanes.maistra.io
-  register: r_smcp_crd
-  retries: 200
-  delay: 10
-  until: r_smcp_crd.resources | list | length == 0
+# - name: Wait for service mesh control plane CRD
+#   k8s_facts:
+#     api_version: apiextensions.k8s.io/v1beta1
+#     kind: CustomResourceDefinition
+#     name: servicemeshcontrolplanes.maistra.io
+#   register: r_smcp_crd
+#   retries: 200
+#   delay: 10
+#   until: r_smcp_crd.resources | list | length == 0
 
 
 - name: Remove OpenShift Objects for Kiali
@@ -38,15 +39,15 @@
   loop:
   - ./files/kiali_subscription.yaml
 
-- name: Wait for Kiali CRD
-  k8s_facts:
-    api_version: apiextensions.k8s.io/v1beta1
-    kind: CustomResourceDefinition
-    name: kialis.kiali.io
-  register: r_kiali_crd
-  retries: 200
-  delay: 10
-  until: r_kiali_crd.resources | list | length == 0
+# - name: Wait for Kiali CRD
+#   k8s_facts:
+#     api_version: apiextensions.k8s.io/v1beta1
+#     kind: CustomResourceDefinition
+#     name: kialis.kiali.io
+#   register: r_kiali_crd
+#   retries: 200
+#   delay: 10
+#   until: r_kiali_crd.resources | list | length == 0
 
 
 
@@ -61,15 +62,15 @@
   loop:
   - ./files/elasticsearch_subscription.yaml
 
-- name: Wait for elasticsearch CRD
-  k8s_facts:
-    api_version: apiextensions.k8s.io/v1beta1
-    kind: CustomResourceDefinition
-    name: elasticsearches.logging.openshift.io
-  register: r_es_crd
-  retries: 200
-  delay: 10
-  until: r_es_crd.resources | list | length == 0
+# - name: Wait for elasticsearch CRD
+#   k8s_facts:
+#     api_version: apiextensions.k8s.io/v1beta1
+#     kind: CustomResourceDefinition
+#     name: elasticsearches.logging.openshift.io
+#   register: r_es_crd
+#   retries: 200
+#   delay: 10
+#   until: r_es_crd.resources | list | length == 0
 
 
 
