--- a/ansible/roles/ocp4-workload-ccnrd/tasks/remove-codeready.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/remove-codeready.yaml
@@ -1,7 +1,7 @@
 ---
 
 # deploy codeready CR
-- name: Create CR for CodeReady
+- name: remove CR for CodeReady
   k8s:
     state: absent
     merge_type:
@@ -13,7 +13,7 @@
 
 
 # deploy codeready operator
-- name: Create operator subscription for CodeReady
+- name: remove operator subscription for CodeReady
   k8s:
     state: absent
     merge_type:
