--- a/ansible/roles/ocp4-workload-ccnrd/defaults/main.yml
+++ b/ansible/roles/ocp4-workload-ccnrd/defaults/main.yml
@@ -15,11 +15,11 @@ module_titles:
   - { name: m3, title: "Control Cloud Native Apps with Service Mesh", path: /workshop/cloudnative/lab/workshop-environment }
   - { name: m4, title: "Advanced Cloud-Native with Event-Driven Serverless", path: /workshop/cloudnative/lab/workshop-environment }
 
-gogs_pwd: 'r3dh4t1!'
+gogs_pwd: 'redhat'
 
 workshop_openshift_user_name: userXX
-workshop_openshift_user_password: 'r3dh4t1!'
+workshop_openshift_user_password: 'redhat'
 workshop_che_user_name: userXX
-workshop_che_user_password: 'r3dh4t1!'
-workshop_rhamt_user_password: 'r3dh4t1!'
+workshop_che_user_password: 'redhat'
+workshop_rhamt_user_password: 'redhat'
 
