--- a/ansible/roles/ocp4-workload-ccnrd/tasks/post_workload.yml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/post_workload.yml
@@ -62,7 +62,7 @@
     - "user.info: CodeReady Workspaces credentials for attendees: {{ workshop_che_user_name }} / {{ workshop_che_user_password }}"
     - "user.info: "
     - "user.info: OpenShift Console: {{ console_url }}"
-    - "user.info: Cluster admin login with '{{ ocp_username }}' / 'r3dh4t1!'"
+    - "user.info: Cluster admin login with '{{ ocp_username }}' / 'redhat'"
     - "user.info: "
     - "user.info: CodeReady Console: https://codeready-labs-infra.{{ route_subdomain }}"
     - "user.info: Admin login with 'admin' / 'admin'"
