--- a/ansible/roles/ocp4-workload-ccnrd/tasks/install-guides.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/install-guides.yaml
@@ -9,7 +9,7 @@
 - name: deploy guide {{ guide }}
   when: r_guide_dc.resources | list | length == 0
   shell: >
-    oc -n labs-infra new-app {{ wzh_registry_server }}/quay.io/openshiftlabs/workshopper:1.0 --name=guides-{{ guide }}
+    oc -n labs-infra new-app --docker-image {{ wzh_registry_server }}/quay.io/openshiftlabs/workshopper:1.0 --name=guides-{{ guide }}
     -e MASTER_URL={{ master_url }}
     -e CONSOLE_URL={{ console_url }}
     -e ECLIPSE_CHE_URL=https://codeready-labs-infra.{{ route_subdomain }}
