--- a/ansible/roles/ocp4-workload-ccnrd/tasks/install-static-html.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/install-static-html.yaml
@@ -9,7 +9,7 @@
 - name: deploy static-html
   when: r_static-html.resources | list | length == 0
   shell: >
-    oc -n labs-infra new-app {{ wzh_registry_server }}/docker.io/wangzheng422/cloudnative-workspaces-quarkus:static-html-2020-07-13-0601 --name=static-html
+    oc -n labs-infra new-app {{ wzh_registry_server }}/docker.io/wangzheng422/cloudnative-workspaces-quarkus:static-html-2020-07-14-0345 --name=static-html
     
 - name: create the Route maxcdn.bootstrapcdn.com for static-html
   when: r_static-html.resources | list | length == 0
@@ -49,6 +49,30 @@
           app: static-html-googleapis
       spec:
         host: 'ajax.googleapis.com'
+        to:
+          kind: Service
+          name: static-html
+          weight: 100
+        port:
+          targetPort: 8080-tcp
+        tls:
+          termination: edge
+  register: Route
+
+- name: create the Route at.alicdn.com for static-html
+  when: r_static-html.resources | list | length == 0
+  k8s:
+    api_version: route.openshift.io/v1
+    namespace: labs-infra
+    state: present
+    kind: Route
+    definition:
+      metadata:
+        name: static-html-alicdn
+        labels:
+          app: static-html-alicdn
+      spec:
+        host: 'at.alicdn.com'
         to:
           kind: Service
           name: static-html
