data grid image stream

--- a/ansible/roles/ocp4-workload-ccnrd/tasks/create_project.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/create_project.yaml
@@ -24,5 +24,6 @@
     - merge
     definition: "{{ lookup('template', item ) | from_yaml }}"
   loop:
-  - ./files/openjdk-11-image stream.yaml
+  - ./files/openjdk-11-image-stream.yaml
+  - ./files/datagrid-image-stream.yaml
   
