mongo image stream

--- a/ansible/roles/ocp4-workload-ccnrd/tasks/create_project.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/create_project.yaml
@@ -26,4 +26,5 @@
   loop:
   - ./files/openjdk-11-image-stream.yaml
   - ./files/datagrid-image-stream.yaml
+  - ./files/mongo-image-stream.yaml
   
