nodejs image stream

--- a/ansible/roles/ocp4-workload-ccnrd/tasks/create_project.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/create_project.yaml
@@ -27,4 +27,5 @@
   - ./files/openjdk-11-image-stream.yaml
   - ./files/datagrid-image-stream.yaml
   - ./files/mongo-image-stream.yaml
+  - ./files/nodejs-10-image-stream.yaml
   
