quarkus image stream

--- a/ansible/roles/ocp4-workload-ccnrd/tasks/create_project.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/create_project.yaml
@@ -27,5 +27,6 @@
   - ./files/openjdk-11-image-stream.yaml
   - ./files/datagrid-image-stream.yaml
   - ./files/mongo-image-stream.yaml
+  - ./files/ubi-quarkus-native-binary-s2i-image-stream.yaml
   
   
