--- a/ansible/roles/ocp4-workload-ccnrd/tasks/remove_workload.yml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/remove_workload.yml
@@ -26,23 +26,23 @@
   debug:
     msg: "selected modules list: {{ modules }}"
 
-- name: Remove service mesh
-  include_tasks: remove-servicemesh.yaml
+# - name: Remove service mesh
+#   include_tasks: remove-servicemesh.yaml
 
-- name: Remove serverless
-  include_tasks: remove-serverless.yaml
+# - name: Remove serverless
+#   include_tasks: remove-serverless.yaml
 
-- name: Remove pipelines
-  include_tasks: remove-pipelines.yaml
+# - name: Remove pipelines
+#   include_tasks: remove-pipelines.yaml
 
-- name: Remove jaeger
-  include_tasks: remove-jaeger.yaml
+# - name: Remove jaeger
+#   include_tasks: remove-jaeger.yaml
 
-- name: Remove codeready
-  include_tasks: remove-codeready.yaml
+# - name: Remove codeready
+#   include_tasks: remove-codeready.yaml
 
-- name: Remove amqstreams
-  include_tasks: remove-amqstreams.yaml
+# - name: Remove amqstreams
+#   include_tasks: remove-amqstreams.yaml
 
 - name: delete templates from openshift namespace
   command: oc delete -n openshift -f -
@@ -69,6 +69,12 @@
 - name: remove the user Projects
   shell: >
     oc delete project {{ item }}-cloudnativeapps {{ item }}-cloudnative-pipeline {{ item }}-istio-system {{ item }}-bookinfo
+  with_list: "{{ users }}"
+  ignore_errors: yes
+
+- name: remove the user Projects
+  shell: >
+    oc delete project {{ item }}-coolstore-dev {{ item }}-coolstore-prod  {{ item }}-monitoring  {{ item }}-rhsso
   with_list: "{{ users }}"
   ignore_errors: yes
 
