--- a/ansible/roles/ocp4-workload-ccnrd/files/mongo-image-stream.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/mongo-image-stream.yaml
@@ -2,6 +2,7 @@ kind: ImageStream
 apiVersion: image.openshift.io/v1
 metadata:
   name: mongo
+  namespace: {{ name }}
 spec:
   tags:
     - name: '4.0'
