--- a/ansible/roles/ocp4-workload-ccnrd/files/openjdk-11-image-stream.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/openjdk-11-image-stream.yaml
@@ -2,6 +2,7 @@ kind: ImageStream
 apiVersion: image.openshift.io/v1
 metadata:
   name: openjdk-11
+  namespace: {{ name }}
   labels:
     app.openshift.io/runtime: quarkus
 spec:
