--- a/ansible/roles/ocp4-workload-ccnrd/tasks/remove_workload.yml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/remove_workload.yml
@@ -60,6 +60,12 @@
     users: "{{ users | default([]) + ['user'+item | string] }}"
   loop: "{{ range(1,((num_users | int) + 1)) | list }}"
 
+- name: remove the knative service
+  shell: >
+    oc delete -n {{ item }}-cloudnativeapps service.serving.knative.dev --all
+  with_list: "{{ users }}"
+  ignore_errors: yes
+
 - name: remove the user Projects
   shell: >
     oc delete project {{ item }}-inventory {{ item }}-catalog 
@@ -89,9 +95,9 @@
   loop:
     - jenkins
     - labs-infra
-    - knative-serving
-    - knaitve-sources
-    - knative-eventing
+    # - knative-serving
+    # - knaitve-sources
+    # - knative-eventing
   ignore_errors: yes
 
 # Leave this as the last task in the playbook.
