--- a/ansible/roles/ocp4-workload-ccnrd/tasks/install-static-html.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/install-static-html.yaml
@@ -4,15 +4,15 @@
     kind: DeploymentConfig
     name: static-html
     namespace: labs-infra
-  register: r_static-html
+  register: r_static_html
 
 - name: deploy static-html
-  when: r_static-html.resources | list | length == 0
+  when: r_static_html.resources | list | length == 0
   shell: >
     oc -n labs-infra new-app {{ wzh_registry_server }}/docker.io/wangzheng422/cloudnative-workspaces-quarkus:static-html-2020-07-15-0937 --name=static-html
     
 - name: create the Route maxcdn.bootstrapcdn.com for static-html
-  when: r_static-html.resources | list | length == 0
+  when: r_static_html.resources | list | length == 0
   k8s:
     api_version: route.openshift.io/v1
     namespace: labs-infra
@@ -37,7 +37,7 @@
   register: Route
 
 - name: create the Route ajax.googleapis.com for static-html
-  when: r_static-html.resources | list | length == 0
+  when: r_static_html.resources | list | length == 0
   k8s:
     api_version: route.openshift.io/v1
     namespace: labs-infra
@@ -62,7 +62,7 @@
   register: Route
 
 - name: create the Route at.alicdn.com for static-html
-  when: r_static-html.resources | list | length == 0
+  when: r_static_html.resources | list | length == 0
   k8s:
     api_version: route.openshift.io/v1
     namespace: labs-infra
@@ -87,7 +87,7 @@
   register: Route
 
 - name: create the Route cdnjs.cloudflare.com for static-html
-  when: r_static-html.resources | list | length == 0
+  when: r_static_html.resources | list | length == 0
   k8s:
     api_version: route.openshift.io/v1
     namespace: labs-infra
@@ -112,7 +112,7 @@
   register: Route
 
 - name: create the Route code.jquery.com for static-html
-  when: r_static-html.resources | list | length == 0
+  when: r_static_html.resources | list | length == 0
   k8s:
     api_version: route.openshift.io/v1
     namespace: labs-infra
