--- a/ansible/roles/ocp4-workload-ccnrd/files/openjdk-11-image-stream.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/openjdk-11-image-stream.yaml
@@ -11,4 +11,4 @@ spec:
       from:
         kind: DockerImage
         name: >-
-          {{ wzh_registry_server }}/registry.access.redhat.com/ubi8/openjdk-11
+          registry.access.redhat.com/ubi8/openjdk-11
