--- a/ansible/roles/ocp4-workload-ccnrd/files/datagrid-image-stream.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/datagrid-image-stream.yaml
@@ -9,4 +9,4 @@ spec:
       from:
         kind: DockerImage
         name: >-
-          {{ wzh_registry_server }}/docker.io/jboss/infinispan-server:10.0.0.Beta3
+          docker.io/jboss/infinispan-server:10.0.0.Beta3
