--- a/ansible/roles/ocp4-workload-ccnrd/files/stack_imagestream.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/stack_imagestream.yaml
@@ -26,3 +26,13 @@ spec:
       kind: DockerImage
       name: quay.io/openshiftlabs/cloudnative-workspaces-quarkus:2.4.1
     name: "2.4.1"
+  - annotations:
+      description: Quarkus stack for Java and CodeReady Workspaces on OCP 4.6
+      iconClass: icon-java
+      supports: java
+      tags: builder,java
+      version: "2.4.1-wzh"
+    from:
+      kind: DockerImage
+      name: docker.io/wangzheng422/cloudnative-workspaces-quarkus:2.4.1-wzh
+    name: "2.4.1-wzh"
