change image stream & oc new-app to nexus

--- a/ansible/roles/ocp4-workload-ccnrd/files/datagrid-image-stream.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/datagrid-image-stream.yaml
@@ -9,4 +9,4 @@ spec:
       from:
         kind: DockerImage
         name: >-
-          docker.io/jboss/infinispan-server:10.0.0.Beta3
+          {{ wzh_registry_server }}/jboss/infinispan-server:10.0.0.Beta3
