--- a/ansible/roles/ocp4-workload-ccnrd/files/ccn-sso74-template.yaml
+++ b/ansible/roles/ocp4-workload-ccnrd/files/ccn-sso74-template.yaml
@@ -213,7 +213,7 @@ objects:
         - ${APPLICATION_NAME}
         from:
           kind: ImageStreamTag
-          name: sso74-openshift-rhel8:7.4
+          name: ccn-sso74-openshift-rhel8:7.4
           namespace: ${IMAGE_STREAM_NAMESPACE}
       type: ImageChange
     - type: ConfigChange
