--- a/ansible/roles/ocp4-workload-ccnrd/tasks/remove_workload.yml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/remove_workload.yml
@@ -52,7 +52,7 @@
     - ./files/coolstore-monolith-binary-build-template.yaml
     - ./files/coolstore-monolith-pipeline-build-template.yaml
     - ./files/ccn-sso74-template.yaml
-    - ./files/sso74-image-stream.yaml
+    # - ./files/sso74-image-stream.yaml
   ignore_errors: yes
 
 - name: create usernames
