fix image stream import problem

--- a/ansible/roles/ocp4-workload-ccnrd/tasks/workload.yml
+++ b/ansible/roles/ocp4-workload-ccnrd/tasks/workload.yml
@@ -71,7 +71,7 @@
   - ./files/openshiftlab-workshop-image-stream.yaml
 
 - name: import image-stream in openshift namespace
-  command: oc import-image -n --all openshift {{ item }}
+  command: oc import-image -n openshift --all {{ item }}
   with_items:
     - "ccn-sso74-openshift-rhel8"
     - "workshopper"
